--- a/main.css
+++ b/main.css
@@ -8,41 +8,19 @@
     margin: 0;
 }
 .header {
-    /* margin-top: 50px; */
     margin-top: 20px;
     margin-bottom: 54px;
-    /* transition: all 0.7s ease; */
+}
+body {
+    background: #FCF4F0;
 }
 .main {
     background: #FCF4F0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
 }
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 44px;
-    color: #000;
-    text-align: center;
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 20px; /* 100% */
-    letter-spacing: -0.5px;
-}
-.container img {
-    width: 231px;
-}
-h1 {
-    font-family: Inter;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 20px;
-    letter-spacing: -0.5px;
     text-align: center;
 }
 .footer {
@@ -52,25 +30,7 @@ h1 {
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    align-items: center;
 }
-.footer .start {
-    padding: 12px 20px;
-    border: none;
-    border-radius: 55px;
-    background: black;
-    width: 342px;
-    height: 68px;
-    color: white;
-    font-family: Clarendon Blk BT;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    margin-top: 100px;
-    cursor: pointer;
-}
-
 .counter {
     border-radius: 9px;
     background: #D9D9D9;
@@ -78,9 +38,7 @@ h1 {
     color: rgba(0, 0, 0, 0.81);
     font-family: Clarendon Blk BT;
     font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 24px */
+    line-height: 150%;
     position: absolute;
     left: 30px;
     top: 120px;
@@ -91,21 +49,17 @@ h1 {
     border: 1px solid #000;
     background: rgba(255, 255, 255, 0.49);
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.15), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-
     color: #000;
     font-family: Inter;
     font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 30px */
+    line-height: 150%;
     padding: 50px 30px;
-    width: 440px;
-    /* height: 265px; */
+    width: 400px;
+    text-align: center;
 }
 .questions .label {
     margin-bottom: 10px;
 }
-
 .variants button {
     width: 338px;
     height: 57px;
@@ -116,13 +70,10 @@ h1 {
     margin-bottom: 19px;
     cursor: pointer;
     transition: all 0.2s ease-in-out;
-
     color: #000;
     font-family: Inter;
     font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 30px */
+    line-height: 150%;
 }
 .variants button:hover {
     background: black;
@@ -131,10 +82,6 @@ h1 {
 button.active {
     background: black;
     color: white;
-}
-.disable {
-    background: #FDF9F7;
-    color: black;
 }
 .question-wrapper {
     display: flex;
