--- a/main.css
+++ b/main.css
@@ -54,7 +54,8 @@ body {
     font-size: 20px;
     line-height: 150%;
     padding: 50px 30px;
-    width: 400px;
+    max-width: 400px;
+    margin: 0 20px;
     text-align: center;
 }
 .questions .label {
